--- a/src/components/pokemonCard/index.css
+++ b/src/components/pokemonCard/index.css
@@ -57,3 +57,11 @@
 .button-more:hover {
     transform: scale(1.1); 
 }
+
+.pokemon-card-container.selected {
+    border: 4px solid #4fa8f0; /* Couleur bleu clair */
+    border-radius: 12px;
+    box-shadow: 0 0 10px #4fa8f0;
+    transition: all 0.3s ease;
+  }
+  
